# prism

./: Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ADVERSARIAL_REVIEW.md  ADVERSARIAL_REVIEW_ROUND2.md  ADVERSARIAL_REVIEW_ROUND3.md  DEVELOPMENT.md  EXECUTION_PLAN.md  SPEC.md  USER_GUIDE.md
src/: app.rs  auth.rs  browser.rs  cli.rs  config.rs  github.rs  main.rs  model.rs  poller.rs  ui.rs
