[package]
name = "prism"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Terminal-native GitHub dashboard for pull requests and Actions"
repository = "https://github.com/lynxsyn/prism"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive", "env"] }
crossterm = "0.28.1"
ctrlc = "3.5.1"
directories = "5.0.1"
open = "5.3.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8.23"

[dev-dependencies]
tempfile = "3.23.0"
